--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+html {
+    max-width: 500px;
+    margin: auto;
+}
+
 body {
     background-color: black;
     color: #ffe28a;
@@ -14,6 +19,11 @@ h3 {
 .grid {
     display: flex;
     flex-wrap: wrap;
-    height: 400px;
-    width: 400px;
+    height: 60%;
+    width: 100%;
+}
+
+img {
+    height: 7rem;
+    width: 7rem;
 }
